[package]
name = "make-pitagoe-db"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
anyhow = "1"
globwalk = "0.8"
log = "0.4"
env_logger = "0.9"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.clap]
version = "3"
features = ["derive"]
